force-app/main/default/objects/Risk_Compliance_Insights__c/Risk_Compliance_Insights__c.object-meta.xml
<CustomObject>
    <label>Risk &amp; Compliance Insights</label>
    <nameField>
        <displayFormat>RCI-{0000}</displayFormat>
        <label>Risk &amp; Compliance Insights Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Risk &amp; Compliance Insights</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>