force-app/main/default/objects/Risk_Compliance_Insights__c/fields/Complaint_Severity_Level__c.field-meta.xml
<CustomField>
    <fullName>Complaint_Severity_Level__c</fullName>
    <label>Complaint Severity Level</label>
    <length>255</length>
    <type>Text</type>
</CustomField>