force-app/main/default/objects/Risk_Compliance_Insights__c/fields/Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Risk &amp; Compliance Insights</relationshipLabel>
    <relationshipName>Risk_Compliance_Insights</relationshipName>
    <type>Lookup</type>
</CustomField>