force-app/main/default/objects/Risk_Compliance_Insights__c/fields/DNC_Do_Not_Contact_Compliance__c.field-meta.xml
<CustomField>
    <fullName>DNC_Do_Not_Contact_Compliance__c</fullName>
    <label>DNC (Do Not Contact) Compliance</label>
    <length>255</length>
    <type>Text</type>
</CustomField>