force-app/main/default/objects/Risk_Compliance_Insights__c/fields/Fraud_Alert_Score__c.field-meta.xml
<CustomField>
    <fullName>Fraud_Alert_Score__c</fullName>
    <label>Fraud Alert Score</label>
    <length>255</length>
    <type>Text</type>
</CustomField>