force-app/main/default/objects/Risk_Compliance_Insights__c/fields/High_Risk_Customer_Flag__c.field-meta.xml
<CustomField>
    <fullName>High_Risk_Customer_Flag__c</fullName>
    <label>High-Risk Customer Flag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>