force-app/main/default/objects/Risk_Compliance_Insights__c/fields/KYC_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>KYC_Expiry_Date__c</fullName>
    <label>KYC Expiry Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>