force-app/main/default/objects/Risk_Compliance_Insights__c/fields/PAN_Aadhaar_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>PAN_Aadhaar_Uploaded__c</fullName>
    <label>PAN / Aadhaar Uploaded</label>
    <length>255</length>
    <type>Text</type>
</CustomField>