force-app/main/default/objects/Risk_Compliance_Insights__c/fields/Regulatory_Compliance_Notes__c.field-meta.xml
<CustomField>
    <fullName>Regulatory_Compliance_Notes__c</fullName>
    <label>Regulatory Compliance Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>