force-app/main/default/objects/Risk_Compliance_Insights__c/fields/Return_Abuse_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Return_Abuse_Indicator__c</fullName>
    <label>Return Abuse Indicator</label>
    <length>255</length>
    <type>Text</type>
</CustomField>