force-app/main/default/objects/Risk_Compliance_Insights__c/fields/Transaction_Pattern_Anomaly__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Pattern_Anomaly__c</fullName>
    <label>Transaction Pattern Anomaly</label>
    <length>255</length>
    <type>Text</type>
</CustomField>